--- a/Frontend/delete.html
+++ b/Frontend/delete.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delete Note</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>NoteBook</h1>
-        <div class="buttons">
-            <a href="index.html"><button>Create</button></a>
-            <a href="view.html"><button>View</button></a>
-            <a href="update.html"><button>Update</button></a>
-            <a href="delete.html"><button>Delete</button></a>
-        </div>
-        <div class="form-container">
-            <h2>Delete Note</h2>
-            <form>
-                <label for="title">Select Note to Delete</label>
-                <select id="title">
-                    <option>Sample Note</option>
-                    <option>Another Note</option>
-                </select>
-                <button type="submit" class="delete-btn">Delete</button>
-            </form>
-        </div>
+      <h1>NoteBook</h1>
+      <div class="buttons">
+        <a href="index.html"><button class="create-btn">Create</button></a>
+        <a href="view.html"><button class="view-btn">View</button></a>
+        <a href="update.html"><button class="update-btn">Update</button></a>
+        <a href="delete.html"
+          ><button class="delete-btn active">Delete</button></a
+        >
+      </div>
+
+      <div class="form-container">
+        <h2>Delete Note</h2>
+        <form id="delete-form">
+          <label for="note-id">Select Note to Delete</label>
+          <select id="note-id">
+            <!-- Notes will be populated here -->
+          </select>
+          <button type="submit" class="delete-btn">Delete</button>
+        </form>
+      </div>
     </div>
-</body>
+    <script src="delete.js"></script>
+  </body>
 </html>
