--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,16 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <h1>NoteBook</h1>
+      <h1>NoteEase</h1>
       <div class="buttons">
-        <button onclick="navigateTo('index.html')">Create</button>
-        <button onclick="navigateTo('view.html')">View</button>
-        <button onclick="navigateTo('update.html')">Update</button>
-        <button onclick="navigateTo('delete.html')">Delete</button>
+        <a href="index.html"
+          ><button class="create-btn active">Create</button></a
+        >
+        <a href="view.html"><button class="view-btn">View</button></a>
+        <a href="update.html"><button class="update-btn">Update</button></a>
+        <a href="delete.html"><button class="delete-btn">Delete</button></a>
       </div>
+
       <div class="form-container">
         <h2>Create</h2>
-        <form>
+        <form id="create-note-form">
           <label for="title">Title</label>
           <input type="text" id="title" placeholder="Enter title" />
 
