--- a/Frontend/update.html
+++ b/Frontend/update.html
@@ -10,26 +10,42 @@
     <div class="container">
       <h1>NoteBook</h1>
       <div class="buttons">
-        <a href="index.html"><button>Create</button></a>
-        <a href="view.html"><button>View</button></a>
-        <a href="update.html"><button>Update</button></a>
-        <a href="delete.html"><button>Delete</button></a>
+        <a href="index.html"><button class="create-btn">Create</button></a>
+        <a href="view.html"><button class="view-btn">View</button></a>
+        <a href="update.html"><button class="update-btn active">Update</button></a>
+        <a href="delete.html"><button class="delete-btn">Delete</button></a>
       </div>
+      
       <div class="form-container">
         <h2>Update Note</h2>
-        <form>
+        <form id="update-note-form">
+          <label for="note-id">Note ID</label>
+          <input
+            type="text"
+            id="note-id"
+            placeholder="Enter Note ID"
+            required
+          />
+
           <label for="title">Title</label>
-          <input type="text" id="title" placeholder="Enter new title" />
+          <input
+            type="text"
+            id="title"
+            placeholder="Enter new title"
+            required
+          />
 
           <label for="description">Description</label>
           <textarea
             id="description"
             placeholder="Enter new description"
+            required
           ></textarea>
 
           <button type="submit">Update</button>
         </form>
       </div>
     </div>
+    <script src="update.js"></script>
   </body>
 </html>
